# Tabular-data-generation

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CHANGELOG.rst  CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md  blog_post.md  encoders.py  model.py  pip_desc.md  pyproject.toml  requirements.txt  run_experiment.py  setup.cfg  setup.py  utils.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: Python_Coverage.yml  codeql.yml  pylint.yml
Research/: encoders.py  model.py  requirements.txt  run_check.py  run_experiment.py  utils.py
Research/ctgan/: README.MD  __init__.py  conditional.py  data.py  synthesizer.py  transformer.py
Research/results/: fit_predict_scores.txt
ctgan/: README.MD  synthesizer.py  transformer.py
docs/: conf.py  index.rst
examples/: tabgan_examples.ipynb
huggingface_space/: README.md  app.py  requirements.txt
results/: fit_predict_scores.txt
src/_ForestDiffusion/: README.MD  __init__.py  diffusion_with_trees_class.py
src/_ForestDiffusion/utils/: __init__.py  diffusion.py  utils_diffusion.py
src/_ctgan/: README.MD  __init__.py  conditional.py  models.py  sampler.py  synthesizer.py  transformer.py
src/ctgan/: README.MD  __init__.py  _sampler.py  _transformer.py  conditional.py  requirements.txt  synthesizer.py  transformer.py
src/tabgan/: __init__.py  _abc_sampler.py  _adversarial_model.py  _temp.py  abc_sampler.py  adversarial_model.py  auto_synth.py  cli.py  constraints.py  encoders.py  hf_integration.py  llm_api_client.py  llm_config.py  model_boosting.py  privacy_metrics.py  quality_report.py  sampler.py  skeleton.py  sklearn_transformer.py  utils.py
tests/: check_readme.py  conftest.py  test_auto_synth.py  test_cli.py  test_constraints.py  test_generate_data_pipe.py  test_hf_integration.py  test_llm_api.py  test_privacy_metrics.py  test_quality_report.py  test_sampler.py  test_skeleton.py  test_sklearn_transformer.py  test_utils.py  test_utils_extended.py
