[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tabgan"
version = "3.0.1"
description = "Synthetic tabular data generation with GANs, Diffusion Models, and LLMs"
readme = "pip_desc.md"
license = {text = "Apache License 2.0"}
authors = [
    {name = "Insaf Ashrapov", email = "iashrapov@gmail.com"}
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pandas",
    "numpy>=2.0",
    "category_encoders",
    "torch>=1.0",
    "lightgbm>=2.2.3",
    "scikit_learn>=1.5.2",
    "torchvision",
    "python-dateutil",
    "tqdm",
    "xgboost",
    "be-great>=0.0.13",
    "matplotlib>=3.5",
    "requests",
]

[project.scripts]
tabgan-generate = "tabgan.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
